@startuml

title US 105 - As an Administrator I want to add a new room to the house
skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor Snow
skinparam FontName quicksand
skinparam titleFontSize 10
skinparam roundcorner 10


skinparam class {
  BorderColor indianred
  BackgroundColor indianred
  BackgroundColor Snow
   roundcorner 10
   ArrowFontName Verdana
   ArrowColor indianred
   ArrowFontColor darkslategrey
   FontSize 12
}

class HouseSettingsWebController
class HouseRoomService
class RoomRepository
class HouseRepository
class Room
class RoomMapper
class HouseCrudRepository
class RoomCrudRepository

HouseSettingsWebController -- HouseRoomService: >
HouseSettingsWebController -- RoomDTOMinimal: >
HouseRoomService -- RoomMapper : >
HouseRoomService -- HouseRepository : >
HouseRoomService -- RoomRepository : >
HouseRoomService -- Room : >
HouseRepository -- HouseCrudRepository : >
HouseRepository -- House : >
RoomRepository -- RoomCrudRepository : >
RoomRepository -- Room : >




class HouseSettingsWebController {
createRoom(@RequestBody RoomWebDTO)
}

class RoomDTOMinimal {
isNameValid()
areDimensionsValid()
}

class HouseRoomService {
addRoomDTOMinimalToHouse(RoomDTOMinimal)
}

class Room{
setHouseID(String houseID)
getId()
}

class RoomMapper{
dtoToObject(roomDTOMinimal)
objectToDTO(roomDTOMinimal)
}


class RoomRepository {
addRoomToCrudRepository(Room room)
getAllRooms()
}

class HouseRepository {
getHouseId()
}

class House {
getId()
}

class RoomCrudRepository{
findAll()
save(Room room)
}

class HouseCrudRepository{
findAll()
}

@enduml